Fix alignment on 'hero' content

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ ul {
     font-size: 24px;
     color: #f9faf8;
     display: flex;
-    justify-content: space-around;
-    padding: 16px;
+    justify-content: space-between;
+    padding: 18px 200px 18px 200px;
 }
 
 .header-links {
@@ -30,12 +30,15 @@ ul {
 
 .hero-content {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     padding-bottom: 32px;
+    gap: 24px;
+    margin: 0px 200px 0px 200px;
 }
 
-.hero-text, .hero-image {
-    max-width: 500px;
+.hero-text {
+    max-width: 400px;
 }
 
 .hero button {
